--- a/app/src/main/res/layout/content_detainee.xml
+++ b/app/src/main/res/layout/content_detainee.xml
@@ -10,6 +10,7 @@
     android:padding="10dp">
 
     <TextView
+        android:id="@+id/lbl_dtn_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
