--- a/app/src/main/res/layout/content_detainee_detail.xml
+++ b/app/src/main/res/layout/content_detainee_detail.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
@@ -11,6 +10,7 @@
     tools:layout_editor_absoluteY="81dp"
     tools:showIn="@layout/app_bar_detainee_detail">
 
+    <!--xmlns:fresco="http://schemas.android.com/apk/res-auto"-->
     <ImageView
         android:id="@+id/img_dtn_photo"
         android:layout_width="match_parent"
