--- a/app/src/main/res/layout/content_vehicle_detail.xml
+++ b/app/src/main/res/layout/content_vehicle_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,9 +13,8 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="344dp"
-        android:layout_height="167dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -94,6 +93,42 @@
                 android:layout_column="1"
                 android:layout_marginLeft="10dp"
                 android:fontFamily="sans-serif"
+                android:text="Description"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="sans-serif"
+                android:text=":"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/lbl_vhc_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoSizeMaxTextSize="100dp"
+                android:autoSizeTextType="uniform"
+                android:layout_column="3"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="sans-serif"
+                android:textSize="16dp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="sans-serif"
                 android:text="Status"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -125,8 +160,8 @@
         android:id="@+id/btn_vhc_approve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginStart="0dp"
+        android:layout_alignStart="@+id/tableLayout"
+        android:layout_alignTop="@+id/btn_vhc_reject"
         android:background="@android:color/holo_green_light"
         android:text="Approve"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_vhc_reject"
@@ -138,8 +173,9 @@
         android:id="@+id/btn_vhc_reject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/btn_vhc_back"
+        android:layout_marginStart="116dp"
         android:background="@android:color/holo_red_dark"
         android:text="Reject"
         app:layout_constraintEnd_toStartOf="@+id/btn_vhc_back"
@@ -150,9 +186,13 @@
         android:id="@+id/btn_vhc_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="164dp"
+        android:layout_marginEnd="29dp"
         android:text="Back"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_vhc_reject"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_vhc_reject" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
